--- a/app/src/main/res/layout/fragment_home_overview.xml
+++ b/app/src/main/res/layout/fragment_home_overview.xml
@@ -59,7 +59,7 @@
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/rcv_post_home"
             android:layout_width="match_parent"
-            android:layout_height="0dp"
+            android:layout_height="@dimen/rcv_post_home_height"
             android:layout_marginStart="@dimen/scroll_view_contain_rcv_home_margin_start"
             android:layout_marginTop="@dimen/scroll_view_contain_rcv_home_margin_top"
             android:layout_marginEnd="@dimen/scroll_view_contain_rcv_home_margin_end"
