--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -300,6 +300,8 @@
     <dimen name="tv_title_traveling_home_margin_top">12dp</dimen>
     <dimen name="tv_title_traveling_home_margin_start">25dp</dimen>
     <dimen name="icon_search_city_home_margin_top">14dp</dimen>
+    <dimen name="icon_library_music_home_margin_top">14dp</dimen>
+    <dimen name="icon_library_music_home_margin_end">14dp</dimen>
     <dimen name="icon_search_city_home_margin_end">14dp</dimen>
     <dimen name="edt_search_city_home_margin_top">7dp</dimen>
     <dimen name="edt_search_city_home_margin_start">16dp</dimen>
@@ -446,4 +448,99 @@
     <dimen name="rcv_post_home_height">0dp</dimen>
     <dimen name="image_btn_pause_or_start_video_width">20dp</dimen>
     <dimen name="image_btn_pause_or_start_video_height">20dp</dimen>
+
+    <!-- Fragment Library Music-->
+    <dimen name="icon_search_library_music_margin_top">5dp</dimen>
+    <dimen name="icon_search_library_music_margin_end">14dp</dimen>
+    <dimen name="tv_title_library_music_margin_start">25dp</dimen>
+    <dimen name="tv_title_library_music_margin_top">24dp</dimen>
+    <dimen name="tv_title_library_music_size">20sp</dimen>
+    <dimen name="tv_title_library_music_line_height">30dp</dimen>
+    <dimen name="round_shuffle_margin_top">32dp</dimen>
+    <dimen name="round_shuffle_margin_end">26dp</dimen>
+    <dimen name="rcv_singer_library_music_margin_top">16dp</dimen>
+    <dimen name="rcv_singer_library_music_margin_start">27dp</dimen>
+    <dimen name="rcv_singer_library_music_margin_end">27dp</dimen>
+    <dimen name="tv_tracks_library_music_size">20sp</dimen>
+    <dimen name="tv_tracks_library_music_line_height">30dp</dimen>
+    <dimen name="tv_tracks_library_music_margin_top">30dp</dimen>
+    <dimen name="tv_tracks_library_music_margin_start">27dp</dimen>
+    <dimen name="round_shuffle_margin_top_38dp">38dp</dimen>
+    <dimen name="round_shuffle_margin_end_26dp">26dp</dimen>
+    <dimen name="img_avt_singer_library_music_width">25dp</dimen>
+    <dimen name="img_avt_singer_library_music_height">25dp</dimen>
+    <dimen name="img_avt_singer_library_music_bolder_width">2dp</dimen>
+    <dimen name="img_avt_singer_library_music_margin_start">25dp</dimen>
+    <dimen name="tv_name_song_library_music_height">15dp</dimen>
+    <dimen name="tv_name_song_library_music_text_size">10sp</dimen>
+    <dimen name="tv_name_song_library_music_line_height">16dp</dimen>
+    <dimen name="tv_name_song_library_music_width">0dp</dimen>
+    <dimen name="tv_name_song_library_music_margin_start">14dp</dimen>
+    <dimen name="tv_name_song_library_music_margin_end">14dp</dimen>
+    <dimen name="item_rcv_more_layout_ellipse_library_music_margin_end">23dp</dimen>
+    <dimen name="rcv_list_music_library_music_height">200dp</dimen>
+    <dimen name="rcv_list_music_library_music_margin_start">23dp</dimen>
+    <dimen name="rcv_list_music_library_music_margin_top">16dp</dimen>
+    <dimen name="rcv_list_music_library_music_margin_end">23dp</dimen>
+    <dimen name="layout_contain_information_music_height">37dp</dimen>
+    <dimen name="layout_contain_information_music_margin_top">5dp</dimen>
+    <dimen name="seek_bar_library_music_margin_top">2dp</dimen>
+    <dimen name="tv_time_music_start_margin_start">24dp</dimen>
+    <dimen name="tv_time_music_start_margin_top">6dp</dimen>
+    <dimen name="tv_time_music_start_line_height">16dp</dimen>
+    <dimen name="tv_time_music_start_size">10sp</dimen>
+    <dimen name="tv_time_music_end_margin_top">6dp</dimen>
+    <dimen name="tv_time_music_end_margin_end">24dp</dimen>
+    <dimen name="tv_time_music_end_line_height">16sp</dimen>
+    <dimen name="tv_time_music_end_size">10sp</dimen>
+    <dimen name="icon_pause_resume_library_music_width">48dp</dimen>
+    <dimen name="icon_pause_resume_library_music_height">48dp</dimen>
+    <dimen name="icon_repeat_library_music_width">12dp</dimen>
+    <dimen name="icon_repeat_library_music_height">12dp</dimen>
+    <dimen name="icon_repeat_library_music_margin_start">25dp</dimen>
+    <dimen name="icon_previous_library_music_width">12dp</dimen>
+    <dimen name="icon_previous_library_music_height">12dp</dimen>
+    <dimen name="icon_previous_library_music_margin_end">27dp</dimen>
+    <dimen name="icon_next_library_music_width">12dp</dimen>
+    <dimen name="icon_next_library_music_height">12dp</dimen>
+    <dimen name="icon_next_library_music_margin_start">27dp</dimen>
+    <dimen name="icon_volume_library_music_width">12dp</dimen>
+    <dimen name="icon_volume_library_music_height">12dp</dimen>
+    <dimen name="icon_volume_library_music_margin_end">25dp</dimen>
+    <dimen name="layout_height">88dp</dimen>
+    <dimen name="thump_width">12dp</dimen>
+    <dimen name="thump_height">12dp</dimen>
+    <dimen name="seek_bar_library_music_height">4dp</dimen>
+    <dimen name="seek_bar_library_music_max_height">4dp</dimen>
+    <dimen name="seek_bar_library_music_min_height">4dp</dimen>
+    <dimen name="card_view_rcv_library_music_radius">5dp</dimen>
+    <dimen name="avt_singer_rcv_library_music_width">146dp</dimen>
+    <dimen name="avt_singer_rcv_library_music">169dp</dimen>
+    <dimen name="tv_name_singer_rcv_library_music_margin_top">10dp</dimen>
+    <dimen name="tv_name_singer_rcv_library_music_size">12sp</dimen>
+    <dimen name="tv_name_singer_rcv_library_music_line_height">18dp</dimen>
+    <dimen name="tv_song_title_rcv_library_music_margin_top">4dp</dimen>
+    <dimen name="tv_song_title_rcv_library_music_line_height">18dp</dimen>
+    <dimen name="tv_song_title_rcv_library_music_size">12sp</dimen>
+    <dimen name="layout_rcv_width">149dp</dimen>
+    <dimen name="tv_time_music_rcv_library_music_margin_top">10dp</dimen>
+    <dimen name="tv_time_music_rcv_library_music_size">10sp</dimen>
+    <dimen name="tv_time_music_rcv_library_music_line_height">16dp</dimen>
+    <dimen name="avt_singer_rcv_all_track_width">50dp</dimen>
+    <dimen name="avt_singer_rcv_all_track_height">50dp</dimen>
+    <dimen name="item_rcv_tracks_margin_top">8.5dp</dimen>
+    <dimen name="item_rcv_tracks_margin_bottom">8.5dp</dimen>
+    <dimen name="tv_name_singer_rcv_all_track_size">12sp</dimen>
+    <dimen name="tv_name_singer_rcv_all_track_line_height">18dp</dimen>
+    <dimen name="tv_name_singer_rcv_all_track_margin_top">7dp</dimen>
+    <dimen name="tv_name_singer_rcv_all_track_margin_start">17dp</dimen>
+    <dimen name="tv_title_song_rcv_all_tracks_size">12sp</dimen>
+    <dimen name="tv_title_song_rcv_all_tracks_line_height">18dp</dimen>
+    <dimen name="tv_title_song_rcv_all_tracks_margin_top">1dp</dimen>
+    <dimen name="tv_title_song_rcv_all_tracks_margin_start">17dp</dimen>
+    <dimen name="tv_playing_rcv_all_track_size">10sp</dimen>
+    <dimen name="tv_playing_rcv_all_track_line_height">16dp</dimen>
+    <dimen name="tv_time_music_rcv_all_track_size">10sp</dimen>
+    <dimen name="tv_time_music_rcv_all_track_margin_top">6dp</dimen>
+    <dimen name="tv_time_music_rcv_all_track_line_height">16dp</dimen>
 </resources>
