--- a/app/src/main/res/layout/activity_post_full_size.xml
+++ b/app/src/main/res/layout/activity_post_full_size.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
-    tools:context=".view.activity.inApp.homePostFullSize.PostFullSizeActivity">
+    tools:context=".controller.activity.inApp.homePostFullSize.PostFullSizeActivity">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
